--- a/project_proposal.tex
+++ b/project_proposal.tex
@@ -22,17 +22,23 @@
 
 \begin{document}
 
-\title{Heinz 95-845: In class}
+\title{Heinz 95-845: Project Proposal}
 
-\author{\name Jeremy Weiss \email ANDREWID/email@address.edu \\
+\author{\name Shuree Gootiiz \email bgootiiz@andrew.cmu.edu \\
        \addr Heinz College of Information Systems and Public Policy\\
        Carnegie Mellon University\\
        Pittsburgh, PA, United States \\
        \AND
-       \name Firstname Lastname \email ANDREWID/email@address.edu \\
+       \name Devraj Kori \email dkori@andrew.cmu.edu \\
+       \addr Heinz College of Information Systems and Public Policy\\
+       Carnegie Mellon University\\
+       Pittsburgh, PA, United States
+       \AND
+       \name Katie Minor \email kminor@andrew.cmu.edu \\
        \addr Heinz College of Information Systems and Public Policy\\
        Carnegie Mellon University\\
        Pittsburgh, PA, United States}
+       
 \maketitle
 
 
