--- a/project_proposal.tex
+++ b/project_proposal.tex
@@ -24,7 +24,7 @@
 
 \title{Heinz 95-845: Project Proposal}
 
-\author{\name Shuree Gootiiz \email bgootiiz@andrew.cmu.edu \\
+\author{\name Batshur Gootiiz \email bgootiiz@andrew.cmu.edu \\
        \addr Heinz College of Information Systems and Public Policy\\
        Carnegie Mellon University\\
        Pittsburgh, PA, United States \\
@@ -34,7 +34,7 @@
        Carnegie Mellon University\\
        Pittsburgh, PA, United States
        \AND
-       \name Katie Minor \email kminor@andrew.cmu.edu \\
+       \name Katherine Minor \email kminor@andrew.cmu.edu \\
        \addr Heinz College of Information Systems and Public Policy\\
        Carnegie Mellon University\\
        Pittsburgh, PA, United States}
@@ -73,22 +73,76 @@ Please provide information for the following fields. Your proposal write-up shou
 
 \subsection{What is your proposed analysis? What are the likely outcomes?}
 
+\bold{Proposed Analysis:}  Can we build a model to predict whether or not a k-12 public school will close in a given school year using school characteristics including school size, class size, school demographics, and the demographics of the surrounding area from three years previous?
+
+\bold({Likely Outcome:} Our model should be able to produce either a probability or ordinal score that indicates the likelihood of a given school closing in three years. Hopefully, this model could be applied to each successive years to predict future closures.
+
+
 
 \subsection{Why is your proposed analysis important?}
+There is a large body of academic research describing the impact of school closures on educational outcomes and socioeconomic inequality. The literature suggests that school closures generally lead to a short-term decline in educational outcomes, even when students transferred to higher quality schools with more resources. If decision-makers were able to forecast closures ahead of time, resources could be devoted to mitigating the short-term costs of closures prior to closures occurring.
+
 
 \subsection{How will your analysis contribute to existing work? Provide references, \emph{e.g.}, see: \cite{cite1}.}
 
+Several studies have examined the impact of school closures on educational outcomes in the short and long term. Engberg et al. (2012) study the restructuring of an urban school district that resulted in 20 school closures in an attempt to move students to better quality schools. They find that closures do lead to decreases in standardized test scores, but that students moving to higher quality schools are not significantly affected by the closure. 
+
+Sacerdote (2012) looks at high school closures in Louisiana due to Hurricanes Katrina and Rita. Like the previous papers, he finds that relocated students do worse on standardized tests immediately after a closure but end up back on trend or better a few years later. 
+
+None of these studies examined the closure as an outcome and parents as the main stakeholders. The contribution of the analysis is to creating a novel tool for parents to use, so that they can make informed choices when they move to another area. 
+
+
 \subsection{Describe the data. Where applicable, please also define Y outcome(s), U treatment, V covariates, and W population.}
+
+The data comes from the National Center for Education Statistics universe survey of all K-12 public schools in the fifty states plus the District of Columbia. The population for our analysis will be all K-12 public schools in the fifty states plus the District of Columbia that were open and active during the 2013-2014 school year. 
+
+The outcome of interest will be whether or not the status of each school from the population is indicated to be "closed" in the 2017-2018 data.
+The treatments and covariates will mainly come from the school-level data in the 2013-2014 dataset. These include 
+\begin{itemize}
+\item whether the school is in an urban, rural, or suburban area
+\item the number of full-time equivalent teachers
+\item enrollment by grade-level, race, gender, and the number of students eligible for NSLP
+\item special statuses of schools such as magnet and charter schools, and schools administered by the Bureau of Indian Education
+\end{itemize}
+We should also be able to use Census data from the 2013 American Community Survey 5-year estimates such as median income and home value price information.
 
 
 \subsection{What evaluation measures are appropriate for the analysis? Which measures will you use?}
 
+We will have to understand tradeoffs and costs in decision making:  Is it worse to falsely classify a school as closing when it is not, or is it worse to label a school which is likely to close as not closing?
+
+Because the positive number of outcomes are small relative to the dataset, we are susceptible to having a model with low sensitivity and high specificity.  We could use a Bayes classifier to lower the threshold of being labelled as a school closure using the posterior probability.  Determining this may be based on an ROC curve of true and false positive rates.  
+
 
 \subsection{What study design, pre-processing, and machine learning methods do you intend to use? Justify that the analysis is of appropriate size for a course project.}
 
-\subsection{What are possible limitations of the study?}
+We will need to look at potential measurement issues with the data collection, and if necessary, backwards correct identified mistakes using data from after 2013-2014. We will also need to employ a combination of theoretical consideration of the features included and statistical evaluation techniques such as principle component analysis since features may be highly correlated.
 
+Part of the pre-processing will involve joining the NCES data with Census ACS data. One option would be to join at the level of congressional district. However, this may be problematic as congressional districts are often deliberately chosen to decrease the representation of certain populations by grouping them within larger populations, which could lead to a large degree of within-district heterogeneity. A better option may be to join zip codes from the NCES with Zip Code Tabulation Areas (ZCTAs) in the census data. ZCTAs are meant to approximate zip codes should be accurate for almost all schools, but they do not exactly overlap with zip codes. 
+
+Our study design will to consider statistical models and learning methods to generate predictions on a training subset of the data, and to validate our results against a hold-out test subset. To account for the fact that positive outcomes are relatively rare in our dataset, we will oversample positive outcomes when generating our training data.
+
+Because our research question is not overly concerned with feature importance, we plan to use models ranging from low to high interpretability. Given the time constraints of this project, we will limit our analysis to the following models:
+\begin{itemize}
+    \item Linear Discriminant Analysis
+    \item Random Forest
+    \item Generalized Additive Model for classification
+    \item Neural Net
+\end{itemize}
+
+
+
+\subsection{What are possible limitations of the study?}
+\begin{itemize}
+Small outcome size (1500 closures in a year compared to 90,000 observations). It may be difficult to tune models to detect these rare occurrences and may complicate our ability to validate our models. To address this concern, we can take several measures including oversampling of closures in a given year. 
+Correlation of school closures.  We probably can’t assume our outcome variable is i.i.d.  For instance, if a city has a reduced budget, this may indicate multiple schools close within the year and they are not independent of each other. Also, if multiple schools in the same neighborhood close due to low enrollment and poor performance, it is possible to have a correlation among school closures. This will impact our interpretation of standard errors for interpretable model designs. 
+\end{itemize}
 \subsection{Who will use your analytic pipeline? In one or two sentences, describe an example of its use.}
+
+1.	Parents, who are homebuyers would be interested in knowing if the school in the area will close.
+2.	Non-Profits in the area may be interested in knowing which schools are likely to close.  Since school closure could be linked to economic downturn, they would want to be aware of future societal problems which are likely to occur, meaning they may need to focus more resources towards those areas.
+3.	Prospective teachers would be interested before accepting roles at the school.
+4.	If school closures are linked to economic depression, businesses interested in investing in the are may also be interested to know if schools are closing.
 
 \bibliography{sample.bib}
 %\appendix
