--- a/sample.bib
+++ b/sample.bib
@@ -1,8 +1,18 @@
 @inproceedings{cite1,
-author = {Her Name and His Name},
-year = {2019},
-title = {AAMLP Project },
-booktitle = {The Journal Where It Was Published}
+author = {Engberg, J.},
+year = {2012},
+title = {Closing Schools },
+booktitle = {Journal of Urban Economics, 71}
+}
+
+@article{cite2,
+author = "Sacerdote, B.",
+title = "When the Saints go Marching Out",
+journal = "American Economic Journal",
+volume = "4",
+number = "1",
+pages = "109--135",
+year = "2012"
 }
 
 @inproceedings{cite2,
