--- a/project_proposal.tex
+++ b/project_proposal.tex
@@ -19,14 +19,14 @@
 % Heading arguments are {volume}{year}{pages}{submitted}{published}{author-full-names}
 
 % Short headings should be running head and authors last names
-\ShortHeadings{95-845: AAMLP Proposal}{Lastname and Lastname}
+\ShortHeadings{95-845: AAMLP Proposal}{Gootiiz, Kori, and Minor}
 \firstpageno{1}
 
 \begin{document}
 
 \title{Heinz 95-845: Project Proposal}
 
-\author{\name Batshur Gootiiz \email bgootiiz@andrew.cmu.edu \\
+\author{\name Shuree Gootiiz \email bgootiiz@andrew.cmu.edu \\
        \addr Heinz College of Information Systems and Public Policy\\
        Carnegie Mellon University\\
        Pittsburgh, PA, United States \\
@@ -44,59 +44,32 @@
 \maketitle
 
 
-\section{Project Details}
-Your project will involve the use of the machine learning pipeline. This is an opportunity for you to explore some interest you have in an applied domain and the machine learning suitable for the task.
-
-The purpose of the project is to conduct an analysis that is novel in some way. The novelty could be in terms of development of machine learning, the assessment of a wide variety of machine learning algorithms at a focused task, or the application of a single machine learning algorithm that impacts a real societal problem.
-
-A list of exemplary papers are available in the Possible Data Sets slides on Canvas. The examples may be helpful in identifying how you conduct your study and prepare your write-up. Two additional resources for finding a problem domain include: (1) Data is Plural (\url{https://goo.gl/UgKgLC}) and, (2) the url: \url{https://github.com/awesomedata/awesome-public-datasets}. We recommend you do not choose a fully pre-processed data set. We do recommend you choose a data set that will fit in memory (or that can be run on your laptop) so that your machine learning process will be manageable.
-
-The proposal for the project is due on \textbf{October 30th}. Please use this TeX template in Section \ref{details} and submit on Canvas \textbf{a link to a git repository with instructions on access (particularly if it is a private repository)}. You may find the online editor Overleaf helpful in drafting your TeX file. However, in order to learn git version control (which will help you checkpoint during your project), we require the submission to be in a git repository. The git repository should include at minimum the .tex, .bib, and .pdf file for your proposal.
-
-\subsection{Objectives}
-The objective of this project proposal is to generate a proposal for your course project. It should be concise and describe the following components:
-\begin{itemize}
-\item The premise of the analysis and a description of an analytic framework that motivates the use of machine learning for your task
-\item Presentation of machine learning techniques appropriate for the task
-\item Description of the data
-\item Description of possible limitations of the study
-\item Description of the likely analysis outcomes and their impact.
-\end{itemize}
-
-\subsection{Parameters}
-The project will be conducted in groups of 2-3.
-
-The project you propose should be different from an existing analysis, including publicly available analyses and analyses from other class projects of yours. It is permissible to perform an analysis in data that warrants a secondary analysis. My guideline here is that the analysis must be greater than 50\% new. To get approval for these studies, please describe the existing project and highlight the difference and contribution of this class's project. Provide any relevant documents (proposals, manuscripts, and/or citations). If the project has overlap with work from another course, you must also provide documented approval from the other faculty member/research collaborator(s). 
-
-Your team is free to use programming language(s) of your choosing, however, we may only be able to support your endeavors in R.
 
 \section{Proposal Details (10 points)} \label{details}
-Please provide information for the following fields. Your proposal write-up should be no more than 2 pages.
 
 \subsection{What is your proposed analysis? What are the likely outcomes?}
 
-Proposed Analysis: Can we build a model to predict whether or not a k-12 public school will close in a given school year using school characteristics including school size, class size, school demographics, and the demographics of the surrounding area from three years previous?
+Proposed Analysis: We aim to build a model to predict whether or not a k-12 public school will close in a given school year using school characteristics including school size, class size, school demographics, and the demographics of the surrounding area from three years previous.
 
-Likely Outcome: Our model should be able to produce either a probability or ordinal score that indicates the likelihood of a given school closing in three years. Hopefully, this model could be applied to each successive years to predict future closures.
-
+Likely Outcome: Our model should be able to produce either a probability or ordinal score that indicates the likelihood of a given school closing within three years. Hopefully, this model could be applied to each successive years to predict future closures.
 
 
 \subsection{Why is your proposed analysis important?}
-There is a large body of academic research describing the impact of school closures on educational outcomes and socioeconomic inequality. The literature suggests that school closures generally lead to a short-term decline in educational outcomes, even when students transferred to higher quality schools with more resources. If decision-makers were able to forecast closures ahead of time, resources could be devoted to mitigating the short-term costs of closures prior to closures occurring.
-
+The literature on school closures suggests that closures generally lead to a short-term decline in educational outcomes, even when students transferred to higher quality schools with more resources. If decision-makers were able to forecast closures ahead of time, resources could be devoted to mitigating the short-term costs of closures prior to closures occurring.
 
 \subsection{How will your analysis contribute to existing work? Provide references, \emph{e.g.}, see: \cite{cite1,cite2}}
 
-Several studies have examined the impact of school closures on educational outcomes in the short and long term. \cite{cite1} study the restructuring of an urban school district that resulted in 20 school closures in an attempt to move students to better quality schools. They find that closures do lead to decreases in standardized test scores, but that students moving to higher quality schools are not significantly affected by the closure. 
+Many studies have examined the impact of school closures ex post.
 
-Sacerdote (2012) looks at high school closures in Louisiana due to Hurricanes Katrina and Rita. Like the previous papers, he finds that relocated students do worse on standardized tests immediately after a closure but end up back on trend or better a few years later. \cite{cite2}
+ \cite{cite1} study the restructuring of an urban school district that resulted in 20 school closures in an attempt to move students to better quality schools. They find that closures do lead to decreases in standardized test scores, but that students moving to higher quality schools are not significantly affected by the closure. 
 
-None of these studies examined the closure as an outcome and parents as the main stakeholders. The contribution of the analysis is to creating a novel tool for parents to use, so that they can make informed choices when they move to another area. 
+\cite{cite2} looks at high school closures in Louisiana due to Hurricanes Katrina and Rita. Like the previous papers, he finds that relocated students do worse on standardized tests immediately after a closure but end up back on trend or better a few years later. 
 
+None of the studies we found examined closures ex ante. The contribution of the analysis is to predicting school closures and creating a novel tool for parents and decision-makers to use.
 
 \subsection{Describe the data. Where applicable, please also define Y outcome(s), U treatment, V covariates, and W population.}
 
-The data comes from the National Center for Education Statistics universe survey of all K-12 public schools in the fifty states plus the District of Columbia. The population for our analysis will be all K-12 public schools in the fifty states plus the District of Columbia that were open and active during the 2013-2014 school year. 
+The data comes from the National Center for Education Statistics universe survey of all K-12 public schools in the fifty states plus the District of Columbia. The population for our analysis will be all K-12 public schools in all states that were open and active during the 2013-2014 school year. 
 
 The outcome of interest will be whether or not the status of each school from the population is indicated to be "closed" in the 2017-2018 data.
 The treatments and covariates will mainly come from the school-level data in the 2013-2014 dataset. These include 
@@ -108,23 +81,22 @@ The treatments and covariates will mainly come from the school-level data in the
 \end{itemize}
 We should also be able to use Census data from the 2013 American Community Survey 5-year estimates such as median income and home value price information.
 
-
 \subsection{What evaluation measures are appropriate for the analysis? Which measures will you use?}
 
-We will have to understand tradeoffs and costs in decision making:  Is it worse to falsely classify a school as closing when it is not, or is it worse to label a school which is likely to close as not closing?
+We will have to understand trade-offs and costs in decision making:  Is it worse to falsely classify a school as closing when it is not, or is it worse to label a school which is likely to close as not closing?
 
-Because the positive number of outcomes are small relative to the dataset, we are susceptible to having a model with low sensitivity and high specificity.  We could use a Bayes classifier to lower the threshold of being labelled as a school closure using the posterior probability.  Determining this may be based on an ROC curve of true and false positive rates.  
+As the positive number of outcomes are small relative to the dataset, we are susceptible to having a model with low sensitivity and high specificity.  We could use a Bayes classifier to lower the threshold of labeling likely school closure using the posterior probability.  Determining this may be based on an ROC curve of true and false positive rates.  
 
 
 \subsection{What study design, pre-processing, and machine learning methods do you intend to use? Justify that the analysis is of appropriate size for a course project.}
 
-We will need to look at potential measurement issues with the data collection, and if necessary, backwards correct identified mistakes using data from after 2013-2014. We will also need to which features make the most theoretical sense to include since many features will likely be highly correlated.
+We will need to look at potential measurement issues with the data collection, and if necessary, backwards correct identified mistakes using data from after 2013-2014. We will also need to decide which features to include as many features will likely be correlated.
 
-Part of the pre-processing will involve joining the NCES data with Census ACS data. One option would be to join at the level of congressional district. However, this may be problematic as congressional districts are often deliberately chosen to decrease the representation of certain populations by grouping them within larger populations, which could lead to a large degree of within-district heterogeneity. A better option may be to join zip codes from the NCES with Zip Code Tabulation Areas (ZCTAs) in the census data. ZCTAs are meant to approximate zip codes should be accurate for almost all schools, but they do not exactly overlap with zip codes. 
+Part of the pre-processing will involve joining the NCES data with Census ACS data. One option would be to join at the level of congressional district. However, congressional districts are often drawn to include distinct populations for political reasons, leading to within-district heterogeneity. A better option may be to join zip codes from the NCES with Zip Code Tabulation Areas (ZCTAs) in the census data. ZCTAs are meant to approximate zip codes should be accurate for almost all schools, but they do not exactly overlap with zip codes. 
 
-Our study design will to consider statistical models and learning methods to generate predictions on a training subset of the data, and to validate our results against a hold-out test subset. To account for the fact that positive outcomes are relatively rare in our dataset, we will oversample positive outcomes when generating our training data.
+Our study design will consist of statistical models and learning methods to generate predictions on a training subset of the data, and to validate our results against a hold-out test subset. To account for the fact that positive outcomes are relatively rare in our dataset, we will oversample positive outcomes when generating our training data.
 
-Because our research question is not overly concerned with feature importance, we plan to use models ranging from low to high interpretability. Given the time constraints of this project, we will limit our analysis to the following models:
+As the research question is not overly concerned with feature importance, we plan to use models ranging from low to high interpretability. Given the time constraints of this project, we will limit our analysis to the following models:
 \begin{itemize}
     \item Linear Discriminant Analysis
     \item Random Forest
@@ -132,21 +104,16 @@ Because our research question is not overly concerned with feature importance, w
     \item Neural Net
 \end{itemize}
 
-
-
 \subsection{What are possible limitations of the study?}
 
-Small outcome size (1500 closures in a year compared to 90,000 observations). It may be difficult to tune models to detect these rare occurrences and may complicate our ability to validate our models. To address this concern, we can take several measures including oversampling of closures in a given year. 
+Small outcome size: (1500 closures in a year compared to 90,000 observations). It may be difficult to tune models to detect these rare occurrences and may complicate our ability to validate our models. To address this concern, we can take several measures including oversampling of closures in our training set.
 
-Correlation of school closures.  We probably can’t assume our outcome variable is i.i.d.  For instance, if a city has a reduced budget, this may indicate multiple schools close within the year and they are not independent of each other. Also, if multiple schools in the same neighborhood close due to low enrollment and poor performance, it is possible to have a correlation among school closures. This will impact our interpretation of standard errors for interpretable model designs. 
+Correlation of school closures: We probably can’t assume our outcome variable is i.i.d.  For instance, if a city has a reduced budget, this may indicate multiple schools close within the year and they are not independent of each other. Also, if multiple schools in the same neighborhood close due to low enrollment and poor performance, it is possible to have a correlation among school closures. This will impact our interpretation of standard errors for interpretable model designs. 
 
 
 \subsection{Who will use your analytic pipeline? In one or two sentences, describe an example of its use.}
+Our analytic pipeline could be used by parents, potential homebuyers, policymakers, and non-profit organizations. For example, a non-profit focused on providing resources to disadvantaged students could use our tool to identify schools that may close and either provide resources to help students prepare for the disruption of a closure or lobby for better funding to prevent the closure. 
 
-1.	Parents, interested in impact on their child's performance as well as those who are homebuyers would be interested in knowing if the school in the area will close.
-2.	Non-Profits in the area may be interested in knowing which schools are likely to close.  Since school closure could be linked to economic downturn, they would want to be aware of future societal problems which are likely to occur, meaning they may need to focus more resources towards those areas.
-3.	Prospective teachers would be interested before accepting roles at the school.
-4.	If school closures are linked to economic depression, businesses interested in investing in the are may also be interested to know if schools are closing.
 
 \bibliography{probref.bib}
 
